# bmw_car_sniffer

./: CMakeLists.txt  sdkconfig
components/can/: CMakeLists.txt  can.c
components/can/include/: can.h  can_defs.h
components/display/: CMakeLists.txt  display.c
components/display/include/: display.h
components/kbus/: CMakeLists.txt  kbus.c  ring_buf.c
components/kbus/include/: kbus.h  kbus_defs.h
components/kbus/priv_include/: ring_buf.h
components/ui/: CMakeLists.txt  screens.c  subjects.c  ui.c
components/ui/fonts/: ui_font_ubuntu_22.c  ui_font_ubuntu_24.c  ui_font_ubuntu_36.c  ui_font_ubuntu_42.c
components/ui/include/: fonts.h  screens.h  subjects.h  ui.h  widgets.h
components/ui/screens/: home.c
components/ui/widgets/: body_tab.c  engine_tab.c  transmission_tab.c
main/: idf_component.yml  main.c
